--- a/src/components/Cart-Icon/CartWidgets.css
+++ b/src/components/Cart-Icon/CartWidgets.css
@@ -1,9 +1,9 @@
 .img-cart {
     width: 100px;
     height: 50px;
-    background-color: #264653;
+    background-color: rgb(69, 60, 103);
     color: azure;
-    border: 3px solid #fca311;
+    border: 3px solid rgb(0, 0, 0);
     border-radius: 10px;
 }
 
@@ -16,7 +16,7 @@
 .cart-number {
     color: rgb(0, 0, 0);
     font-size: 12px;
-    background-color: #ffcaca;
+    background-color: rgb(242, 247, 161);
     background-size: 20px 20px;
     background-position: 2px;
     padding: 5px;
