--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,9 +4,9 @@
 .textodescripcion {
     font-family: 'Vollkorn', serif;
     font-size: 100px;
-    color: black;
+    color: rgb(70, 194, 203);
     border-radius: 20px;
-    background-image: linear-gradient(174.2deg, rgba(255, 244, 228, 1) 7.1%, rgba(240, 246, 238, 1) 67.4%);
+
     text-shadow: 0 0 50px rgb(0, 0, 0);
 
 }
