--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
   margin: 20px 20px;
   padding: 0;
-  background-image: radial-gradient(circle farthest-corner at 1.3% 2.8%, rgba(239, 249, 249, 1) 0%, rgba(182, 199, 226, 1) 100.2%);
+  background-image: radial-gradient(circle farthest-corner at 1.3% 2.8%, rgb(69, 60, 103) 0%, rgba(69, 60, 103, 0.952) 100.2%);
 }
